# log4shell-vulnerable-app

./: .gitignore  BUILD  BUILD.bazel  Dockerfile  README.md  WORKSPACE  WORKSPACE.bazel  build.gradle  build.sh  install-maven.sh  module.json  pom.xml  pom.xml.old  summary.md
.github/workflows/: code-analysis-pr.yml  gradle-build.yml
analysis/: bazel.txt  gradle.txt  maven.txt
build_tools/bazel/: build.sh
build_tools/gradle/: build.sh
src/main/java/fr/christophetd/log4shell/vulnerableapp/: MainController.java
